# text-painting-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: index.html
assets/assets/: index.856de4f9.js  index.bbe15292.css  vendor.bbe85cc9.js
assets/css/: app.71bb72ae.css
assets/js/: app.43d5df4b.js  app.43d5df4b.js.map  chunk-vendors.c954cbac.js  chunk-vendors.c954cbac.js.map
cmake/: App.cmake  Dependencies.cmake
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/config/: ConfigurationProvider.cpp
src/common/include/common/config/: ConfigurationProvider.h
src/common/include/common/infrastructure/: UltralightLogger.h
src/common/include/common/utilities/: JsonParsing.h  ThreadSafeQueue.h
src/common/infrastructure/: UltralightLogger.cpp
src/common/utilities/: JsonParsing.cpp
src/core/: Application.cpp  CMakeLists.txt  ColoringService.cpp  UiOutgoingMessage.cpp  UiResponseService.cpp  VueStoreProxy.cpp
src/core/include/core/: Application.h  CharacterColors.h  ColoringService.h  UiMessageProcessor.h  UiOutgoingMessage.h  UiResponseService.h  VueStoreProxy.h  highlight.h
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: App.vue  main.ts
ui/src/assets/styles/: styles.scss
ui/src/components/: CustomInput.vue
